clang/test/BSC/Negative/Trait/r1/definition_4/definition_4.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(This* this, int a);
};

_Trait F* bar(_Trait F* i, int a) {
  i->foo(42);
  return i;
}

struct S{
  int x;
};

int struct S::foo(struct S* this) {
  return this->x;
}

_Impl _Trait F for struct S; // expected-error {{type of 'foo' conflicts with that of '_Trait F'}} expected-warning {{incompatible function pointer types initializing 'int (*)(void *, int)' with an expression of type 'int (*)(void *)'}}
                           

int main() {
  struct S s1 = { .x = 42 };
  return 1;
};
